--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
