--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@prisma/client": "^4.16.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.0",
+    "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2"
   }
