--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
+    "@mui/material": "^5.13.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.1",
     "autoprefixer": "10.4.14",
@@ -30,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2"
   }
