--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "leaflet": "^1.9.4",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -32,9 +33,11 @@
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
     "swr": "^2.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "world-countries": "^4.0.0"
   }
 }
