--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.7.3",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "world-countries": "^4.0.0"
