--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
-    "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
@@ -40,5 +39,8 @@
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "world-countries": "^4.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.16.2"
   }
 }
