--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^5.13.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
+    "antd": "^5.7.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.0",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.9",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "leaflet": "^1.9.4",
