--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.13.0",
+    "nextjs": "^0.0.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
