--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^4.16.2",
     "antd": "^5.7.2",
     "autoprefixer": "10.4.14",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.0",
