update create property page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.15",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.13.6",
+    "@mui/x-date-pickers": "^6.14.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "^13.5.2",
     "@prisma/client": "^5.2.0",
