--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "clsx": "^1.2.1",
     "dayjs": "^1.11.9",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "^13.5.2",
     "leaflet": "^1.9.4",
-    "next": "13.4.7",
+    "next": "^13.5.2",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.13.0",
     "nextjs": "^0.0.3",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
