--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "^13.5.2",
     "leaflet": "^1.9.4",
+    "moment": "^2.29.4",
     "next": "^13.5.2",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.13.0",
